# random_stuff

./: .gitignore  README.md
angular/bond-battler/: .angular-cli.json  README.md  package-lock.json  package.json
blog/: cpp_build_opts.md  stdafxize.py
boost/serialization/: boost_serialize.cpp
cmake/dll_hierarchy/: cmakelists-dlls.tpl
cmake/dll_hierarchy/dll_b/: CMakeLists.txt  b.cpp  b.h
cmake/lib_tests_programs/libs/a/: CMakeLists-vsm.cmake  CMakeLists.txt  a-other.h  a.cpp
cmake/lib_tests_programs/libs/a/a_sub/: a_sub.h
cmake/lib_tests_programs/libs/a/tests/: CMakeLists.txt  tests_a.cpp
cmake/lib_tests_programs/libs/b/: CMakeLists.py  CMakeLists.txt  b2.cpp
cpp/binres/: binres-builder.py  binres-builder2.py  binres_core.py  build.sh
cpp/function_of/: FunctionOf.cpp  FunctionOf.vcxproj  FunctionOf.vcxproj.filters  ReadMe.txt  stdafx.cpp
cpp/microtar/: .gitignore  CMakeLists.txt  dl.py  memstream.cpp
cpp/node/: .clang-format  .gitignore  CMakeLists.txt  main.cpp  node.h  node_algos.h
cpp/tree_in_raw_storage/: tree_in_raw_storage.sln
cpp/unlzh/: CMakeLists.txt  cmake_build.bat  unlzh.c  unlzh.cpp  unlzh.h  unlzh_defs.h  unlzh_main.cpp
cpp/variant/: variant.cpp
googleappengine/helloworld/: helloworld.py  partial_xml.py  ub.py
maps/: html5canvas.html  touchtest.html
maps/jTileDownloader/: appConfig.xml  url.xml  url_xml_usage.txt
maps/js/: detectMoveOrDrag.js  mapConfig.js  mapConfig_15.js
other/basickl/: PhotoStitchCreator.h  basickl.cbp  basickl.depend  basickl.layout  main.cpp  ptsChain1.h
other/basickr/: PhotoStitchCreator.h  basickr.depend  basickr.layout  main.cpp
other/ffmpeg/: frame_source.py  mpeg4_avi_twopass.sh  readme.txt
processingjs/darts_scoreboard/: index.html  package-lock.json  package.json  serve.bat
processingjs/template/: index.html
python/: tmp_11092-ytdlx139893290.py
python/GuessWho/: Case24.txt  EndGame.txt  GuessWho-Characteristics.txt  GuessWho.py  characters.py
python/PointToPixelLine/: Pt2PixelLine.py
python/bus/: bus.py  bus_svr.py
python/cdrom_autorip/: cdrip.py
python/colorblend/: colorblendalgo.py  qtcolorblend.py
python/coming_home/: coming_home.py
python/countdown_solver/: countdown_solver.py
python/darts/: _darts_pml2016.sh  darts_pml2016.py  darts_pml2017.py  get_links.py  tests.py  util.py
python/findDups/: findDups.py
python/games/: mmind.py
python/imagemagick/: split_southbank.sh
python/ipc/: CMakeLists.txt  client.cpp  client.py  client2.cpp  server.py
python/linear-predictor/: linear-predictor.py
python/livedarts/: css.py  scraper.py
python/magickwand/: magickwand-driver.py  magickwand.py
python/opencv/: thinning.py
python/poker/: poker_rank_tests.py  poker_ranks.py  poker_sim.py  prime_poker_ranks.py  prime_poker_ranks.txt
python/poplib/: retr_del.py  zip_2_7z.py
python/pyqtruler/: pyqtruler.py  pyqtruler.pyproj  pyqtruler.pyw
python/rotaToPp/: RotaToPp.py  RotaToPp.pyproj
python/tfl_api_debug/: query_gui.py  query_urls.py  result_filters.py  simpletreemodel.py  tfl_api_query.py  treeview.py
python/tfl_bus/: README.md  bus-times.py
python/tube_challenge/: autocomplete.py  colored_auto_complete.py  data-test.py  data_js.py  data_routes.py  distances.py  my_attempt_1.csv  outbound.py  requirements.txt  station_data.py  time_slurp.py  timetable_search.py  tube_adventure-alberts-first-route.txt  tube_adventure-andys-17ish-hours.txt  tube_adventure-route-from-telegraph-15-half-hours.csv  tube_adventure-route-from-telegraph-15-half-hours.txt  tube_adventure.py  tube_adventure_tests.py  tube_challenge_csv.py  tube_challenge_main_form.py  tube_challenge_main_form.ui  underground_gps.py
python/tvlistings/: bleb.py  tvlistings.py
python/unbelievable_id3/: dl.py  parse.py
python/underground/: central_hainault.csv  central_line.csv  gps.csv  gps.py  metro_amersham.csv  metro_watford.csv  name_lookup.py  northern_bank.csv  northern_charing_x.csv  (+1 more)
remote/: keyboard.css  keyboard.html  left  post.py  remote.html  right
rpi/: rpi.md
wikifilter/: simplewiki-filter.py  simplewiki-url.txt
worker_threads/: html5rocks_example.html  prime_catcher.html
zim/: getoeb.sh  libzim.so.0  makeoebzim.sh  readme.md  zimwriterfs
(+123 files in other folders)
